--- a/app/views/layouts/boggle.html.erb
+++ b/app/views/layouts/boggle.html.erb
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>ReactOnRailsWithWebpacker</title>
+    <title>Boggle</title>
     <%= csrf_meta_tags %>
-    <%= javascript_pack_tag 'hello-world-bundle' %>
+    <%= javascript_pack_tag 'boggle-bundle' %>
   </head>
 
   <body>
