--- a/app/views/layouts/boggle.html.erb
+++ b/app/views/layouts/boggle.html.erb
@@ -4,6 +4,7 @@
     <title>Boggle</title>
     <%= csrf_meta_tags %>
     <%= javascript_pack_tag 'boggle-bundle' %>
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
